[package]
name = "minifi-native"
version = "0.1.0"
edition = "2021"
description = "A safe, idiomatic Rust wrapper for the Apache NiFi MiNiFi C API"
license = "Apache-2.0"

[dependencies]
# This line tells Cargo that our safe `minifi` crate depends on the
# `minifi-sys` crate. The `path` key is used to point to its location
# on the local filesystem, which is typical for a workspace setup.
minifi-native-sys = { path = "../minifi-native-sys-rs", version = "0.1.0" }
