[package]
name = "minifi-native"
version = "0.1.0"
edition = "2024"
description = "A safe, idiomatic Rust wrapper for the Apache MiNiFi Native C API"
license = "Apache-2.0"

[features]
mock-logger = []

[dependencies]
const_format = "0.2.34"
minifi-native-sys = { path = "../minifi-native-sys" }
strum = "0.27.2"
strum_macros = "0.27.2"
humantime = "2.3.0"
byte-unit = "5.1.6"
itertools = "0.14.0"