[package]
name = "reference-extension"
version = "0.1.0"
edition = "2024"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[lib]
crate-type = ["cdylib"]

[dependencies]
minifi-native = { path = "../minifi-native" }
ctor = "0.5.0"
strum = "0.27.2"
const_format = "0.2.34"
walkdir = "2.5.0"
rand = "0.9.2"

[dev-dependencies]
tempfile = "3.22.0"
filetime = "0.2.26"
humantime = "2.3.0"
