[package]
name = "rust_reference_extension"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
minifi-native = { path = "../minifi-native" }
strum = "0.27.2"
const_format = "0.2.34"
walkdir = "2.5.0"
rand = "0.9.2"
hex = "0.4.3"
strum_macros = "0.27.2"

[dev-dependencies]
minifi-native = { path = "../minifi-native" }
tempfile = "3.22.0"
filetime = "0.2.26"
